--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -23,6 +23,10 @@ jobs:
           chmod +x terminus
           sudo mv terminus /usr/local/bin/
 
+      - name: Install Terminus
+        run: |
+          terminus self:plugin:install terminus-build-tools-plugin
+
       - name: Authenticate with Pantheon
         run: terminus auth:login --machine-token="$PANTHEON_MACHINE_TOKEN"
 
