--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Create or Update Multidev Environment
         if: github.event.action != 'closed'
         run: |
-          terminus env:delete $PANTHEON_SITE_ID.$MULTIDEV_ENV --yes --delete-branch || true
-          terminus multidev:create $PANTHEON_SITE_ID.dev $MULTIDEV_ENV
+          terminus build:env:delete $PANTHEON_SITE_ID.$MULTIDEV_ENV --yes --delete-branch || true
+          terminus build:env:create $PANTHEON_SITE_ID.dev $MULTIDEV_ENV
           terminus connection:set $PANTHEON_SITE_ID.$MULTIDEV_ENV git
           terminus build:env:push --site=$PANTHEON_SITE_ID --env=$MULTIDEV_ENV --branch=${GITHUB_SHA}
 
