--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -36,8 +36,8 @@ jobs:
           terminus env:delete $PANTHEON_SITE_ID.$MULTIDEV_ENV --yes --delete-branch || true
           terminus build:env:create $PANTHEON_SITE_ID.dev $MULTIDEV_ENV
           terminus connection:set $PANTHEON_SITE_ID.$MULTIDEV_ENV git
-          git config user.name "$LAST_COMMITTER_NAME"
-          git config user.email "$LAST_COMMITTER_EMAIL"
+          terminus git config user.name "${{ github.event.pusher.name }}"
+          terminus git config user.email "${{ github.event.pusher.email }}"
           terminus build:env:push --site=$PANTHEON_SITE_ID --env=$MULTIDEV_ENV --branch=${GITHUB_SHA}
           terminus drush $PANTHEON_SITE_ID.$MULTIDEV_ENV updb -y
           terminus drush $PANTHEON_SITE_ID.$MULTIDEV_ENV cim -y
