--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -33,6 +33,8 @@ jobs:
       - name: Create or Update Multidev Environment
         if: github.event.action != 'closed'
         run: |
+          git config --global user.email "you@example.com"
+          git config --global user.name "Your Name"
           terminus build:env:create $PANTHEON_SITE_ID.dev $MULTIDEV_ENV --yes
           terminus build:env:push $PANTHEON_SITE_ID.$MULTIDEV_ENV
           terminus drush $PANTHEON_SITE_ID.$MULTIDEV_ENV updb -y
