--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -12,6 +12,7 @@ jobs:
       PANTHEON_SITE_ID: ${{ secrets.PANTHEON_SITE_ID }}
       PANTHEON_MACHINE_TOKEN: ${{ secrets.PANTHEON_MACHINE_TOKEN }}
       MULTIDEV_ENV: pr-${{ github.event.number }}
+      SSH_KEY: ${{ secrets.SSH_KEY }}
 
     steps:
       - name: Checkout code
@@ -33,6 +34,7 @@ jobs:
       - name: Create or Update Multidev Environment
         if: github.event.action != 'closed'
         run: |
+          ssh-add $SSH_KEY
           git config --global user.email "you@example.com"
           git config --global user.name "Your Name"
           terminus build:env:create $PANTHEON_SITE_ID.dev $MULTIDEV_ENV --yes
