--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -12,7 +12,6 @@ jobs:
       PANTHEON_SITE_ID: ${{ secrets.PANTHEON_SITE_ID }}
       PANTHEON_MACHINE_TOKEN: ${{ secrets.PANTHEON_MACHINE_TOKEN }}
       MULTIDEV_ENV: pr-${{ github.event.number }}
-      SSH_KEY: ${{ secrets.SSH_KEY }}
 
     steps:
       - name: Checkout code
@@ -30,6 +29,13 @@ jobs:
 
       - name: Authenticate with Pantheon
         run: terminus auth:login --machine-token="$PANTHEON_MACHINE_TOKEN"
+
+      - name: Set up SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
 
       - name: Create or Update Multidev Environment
         if: github.event.action != 'closed'
