--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -36,7 +36,7 @@ jobs:
           echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa.pub
           chmod 600 ~/.ssh/id_rsa.pub
           eval "$(ssh-agent -s)"
-          ssh-add $SSH_KEY
+          ssh-add ~/.ssh/id_rsa.pub
 
       - name: Create or Update Multidev Environment
         if: github.event.action != 'closed'
