--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -17,6 +17,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Add SSH key
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+            ssh-private-key: ${{ secrets.SSH_KEY }}
+
       - name: Install Terminus
         run: |
           curl -L https://github.com/pantheon-systems/terminus/releases/download/3.0.2/terminus.phar -o terminus
@@ -29,14 +34,6 @@ jobs:
 
       - name: Authenticate with Pantheon
         run: terminus auth:login --machine-token="$PANTHEON_MACHINE_TOKEN"
-
-      - name: Set up SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa.pub
-          chmod 600 ~/.ssh/id_rsa.pub
-          eval "$(ssh-agent -s)"
-          ssh-add ~/.ssh/id_rsa.pub
 
       - name: Create or Update Multidev Environment
         if: github.event.action != 'closed'
