--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -38,15 +38,14 @@ jobs:
       - name: Prepare code for deployment
         if: github.event.action != 'closed'
         run: |
-          git config --global user.email "github-actions@example.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "alex.zani@ffw.com"
+          git config --global user.name "Alex Zani"
           commit_message=$(git log -1 --pretty=%B)
           rm -rf .git
           rm -rf .github
           rm -rf scripts
           rm -rf web/core/*.txt
           git init
-          git config --local gc.auto 0
           git add --force .
           git commit -m "Automated deploy: $commit_message" >/dev/null
 
