--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -38,14 +38,7 @@ jobs:
       - name: Prepare code for deployment
         if: github.event.action != 'closed'
         run: |
-          LAST_COMMIT_MESSAGE=`git log -1 --pretty=%B`
-          LAST_COMMITTER_NAME=`git log -1 --pretty=%cn`
-          LAST_COMMITTER_EMAIL=`git log -1 --pretty=%ce`
-          echo $LAST_COMMIT_MESSAGE
-          echo $LAST_COMMITTER_EMAIL
-          git config user.name "$LAST_COMMITTER_NAME"
-          git config user.email "$LAST_COMMITTER_EMAIL"
-          terminus build:env:push $PANTHEON_SITE_ID.$MULTIDEV_ENV --message=$LAST_COMMITTER_MESSAGE -y
+          git log
 
       - name: Delete Multidev Environment
         if: github.event.action == 'closed'
