--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -32,7 +32,11 @@ jobs:
 
       - name: Create or Update Multidev Environment
         if: github.event.action != 'closed'
-        run: |  
+        run: |
+          LAST_COMMITTER_NAME=`git log -1 --pretty=%cn`
+          LAST_COMMITTER_EMAIL=`git log -1 --pretty=%ce`
+          git config user.name "$LAST_COMMITTER_NAME"
+          git config user.email "$LAST_COMMITTER_EMAIL"
           terminus build:env:create $PANTHEON_SITE_ID.dev $MULTIDEV_ENV --yes
 
       - name: Prepare code for deployment
