--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -48,6 +48,10 @@ jobs:
         run: |
           git log
           git remote
+          git remote add pantheon ssh://codeserver.dev.d2fe9d28-a99a-432f-963e-aaee6e0ecb15@codeserver.dev.d2fe9d28-a99a-432f-963e-aaee6e0ecb15.drush.in:2222/~/repository.git
+          git remote
+          git push pantheon HEAD:$MULTIDEV_ENV
+
 
       - name: Delete Multidev Environment
         if: github.event.action == 'closed'
