--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -48,8 +48,9 @@ jobs:
         run: |
           git log
           git remote
-          git remote add pantheon ssh://codeserver.dev.d2fe9d28-a99a-432f-963e-aaee6e0ecb15@codeserver.dev.d2fe9d28-a99a-432f-963e-aaee6e0ecb15.drush.in:2222/~/repository.git
+          git remote add pantheon ssh://codeserver.dev.$PANTHEON_SITE_ID@codeserver.dev.$PANTHEON_SITE_ID.drush.in:2222/~/repository.git
           git remote
+          ssh-keyscan codeserver.dev.$PANTHEON_SITE_ID.drush.in >> ~/.ssh/known_hosts
           git push pantheon HEAD:$MULTIDEV_ENV
 
 
