--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -48,10 +48,10 @@ jobs:
         run: |
           git log
           git remote
-          git remote add pantheon ssh://codeserver.dev.$PANTHEON_SITE_ID@codeserver.dev.$PANTHEON_SITE_ID.drush.in:2222/~/repository.git
+          git remote add pantheon ssh://codeserver.dev.$PANTHEON_SITE_ID@codeserver.dev.$PANTHEON_SITE_ID.drush.in:2222/~/repository.git || true
           git remote
           echo 'Pushing code to Pantheon'.
-          git push pantheon HEAD:$MULTIDEV_ENV
+          git push -f pantheon HEAD:$MULTIDEV_ENV
 
 
       - name: Delete Multidev Environment
