--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -16,7 +16,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        ref: ${{ github.ref }}
+        with:
+          ref: ${{ github.ref }}
 
       - name: Add SSH key
         uses: webfactory/ssh-agent@v0.9.0
