--- a/.github/workflows/pantheon-multidev.yml
+++ b/.github/workflows/pantheon-multidev.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Create or Update Multidev Environment
         if: github.event.action != 'closed'
         run: |
-          terminus multidev:delete $PANTHEON_SITE_ID.$MULTIDEV_ENV --yes --delete-branch
+          terminus multidev:delete $PANTHEON_SITE_ID.$MULTIDEV_ENV --yes --delete-branch || true
           terminus multidev:create $PANTHEON_SITE_ID.dev $MULTIDEV_ENV
    
 
